<resources>
    <string name="app_name">吃什么</string>
    <string name="eat_time_type">%1$s时间</string>
    <string name="eated">吃过</string>
    <string name="str_energy_chart">热量表</string>
    <string name="str_energy_unit">单位:卡路里</string>
    <string name="str_breakfast">早餐</string>
    <string name="str_calorie">卡路里</string>
    <string name="str_lunch">中餐</string>
    <string name="str_dinner">晚餐</string>
    <string name="str_snack">零食</string>
    <string name="str_setting">设置</string>
    <string name="str_accept_notification">接收通知</string>
    <string name="str_app_version">版本信息</string>
    <string name="str_slogan">山不厌高，海不厌深\n周公吐哺，天下归心</string>
    <string name="str_feedback">反馈</string>
    <string name="str_about">关于</string>
    <string name="hint_feedback">有什么想说的？</string>
    <string name="str_about_app">这是一款帮助你进行用餐选择的app，它能帮助你早日脱离不知道下一餐吃什么的苦海。现在app正在野蛮成长中，相信因为有你它会越来越好用，越来越有趣。</string>
    <string name="str_donate">打赏</string>
    <string name="str_donate_content">微信扫码打赏，督促作者加快app更新进度。</string>
    <string name="str_call_author">联系作者</string>
    <string name="str_call_author_wx">微信，搜索 Two__days 添加作者(两个下划线)，或者扫一扫加作者微信。</string>
    <string name="str_call_author_lofter">乐乎，点击</string>
    <string name="str_call_author_lofter_site">puulan.lofter.com</string>
    <string name="str_inputPhoneNum">手机号注册</string>
    <string name="hint_inputPhoneNume">请输入手机号</string>
    <string name="str_next">下一步</string>
    <string name="toast_phoneNumIsErr">请输入正确的电话号码</string>
    <string name="str_inputCode">输入验证码</string>
    <string name="hint_inputCode">请输入验证码</string>
    <string name="str_registerRetry">没收到验证码？点我重试</string>
    <string name="str_sex">性别</string>
    <string name="str_birth">出生日期</string>
    <string name="str_height">海拔</string>
    <string name="str_cm">(cm)</string>
    <string name="str_weight">吨位</string>
    <string name="str_kg">(kg)</string>
    <string name="str_intake">每天至少摄入</string>
    <string name="str_forYou">最适合现在的你</string>
    <string name="str_iKnow">我知道了</string>
    <string name="str_receiveSMSTick">%1$ss后可重试</string>
    <string name="toast_confirmCodeErr">请输入正确的6位验证码</string>
    <string name="str_date">%1$s年%2$s月%3$s日</string>
    <string name="str_caculating">正在疯狂计算中</string>
    <string name="str_mine">个人中心</string>
    <string name="str_alreadyRegister">该手机号已注册</string>
    <string name="str_goLogin">去登录</string>
    <string name="toast_sysErr">系统错误，请重试</string>
    <string name="toast_badNet">网络不可用</string>
    <string name="str_phoneLogin">手机号登录</string>
    <string name="str_login">登录</string>
    <string name="str_getCode">获取验证码</string>
    <string name="toast_loginSuccess">登录成功</string>
    <string name="str_call_author_jianshu">简书，点击</string>
    <string name="str_call_author_jianshu_site">www.jianshu.com/u/e31006a77fa5</string>
    <string name="str_user">用户</string>
    <string name="str_goLoginHasAccout">已有账号？去登录</string>
    <string name="str_change">确认修改</string>
    <string name="toast_setSuccess">设置成功</string>
    <string name="toast_setFailed">设置失败</string>
    <string name="str_imSure">决定了</string>
    <string name="str_retry">重试</string>
    <string name="str_sugest">建议每日至少摄入:</string>
</resources>
