<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:scaleType="fitStart"
        android:src="@drawable/bkg_about" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="48dp">

                <TextView
                    style="@style/font_title_big"
                    android:layout_centerVertical="true"
                    android:text="@string/str_about" />

                <ImageView
                    android:id="@+id/iv_cancel"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/img_cancel" />
            </RelativeLayout>

            <TextView
                style="@style/font_body_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/str_about_app" />

            <TextView
                style="@style/font_title_big"
                android:layout_marginBottom="8dp"
                android:text="@string/str_donate" />

            <TextView
                style="@style/font_body_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/str_donate_content" />

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="right"
                android:layout_marginBottom="32dp"
                android:translationZ="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_wx_donate_qrcode" />
            </android.support.v7.widget.CardView>

            <TextView
                style="@style/font_title_big"
                android:layout_marginBottom="8dp"
                android:text="@string/str_call_author" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/font_body_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/str_call_author_lofter" />

                <TextView
                    style="@style/font_body_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:autoLink="web"
                    android:text="@string/str_call_author_lofter_site" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/font_body_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/str_call_author_jianshu" />

                <TextView
                    style="@style/font_body_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:autoLink="web"
                    android:text="@string/str_call_author_jianshu_site" />

            </LinearLayout>

            <TextView
                style="@style/font_body_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/str_call_author_wx" />

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="right"
                android:layout_marginBottom="32dp"
                android:translationZ="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_qrcode_wx" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>