<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/font_title_big"
            android:text="@string/str_birth" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/str_date"
        android:textColor="@color/font_gray"
        android:textSize="16sp" />

    <com.pulan.widget.BirthView
        android:id="@+id/bv"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btn_next"
        style="@style/btn_normal"
        android:text="@string/str_next" />

</LinearLayout>