<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp">

        <TextView
            style="@style/font_title_big"
            android:layout_centerVertical="true"
            android:text="@string/str_mine" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/img_cancel" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_user"
            style="@style/font_body_normal"
            android:layout_marginLeft="16dp"
            android:text="@string/str_user" />

        <TextView
            android:id="@+id/tv_phoneNum"
            style="@style/font_title_big"
            android:layout_below="@+id/tv_user"
            android:layout_marginLeft="16dp"
            android:text="123****2333"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/iv_sex"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/img_sex_woman" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_height"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_click"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/str_height"
            android:textColor="@color/pulanBlack"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/img_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weight"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_click"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/str_weight"
            android:textColor="@color/pulanBlack"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/img_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            style="@style/font_body_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_sugest" />

        <TextView
            android:id="@+id/tv_bestEnergy"
            style="@style/font_body_normal"
            android:layout_gravity="right"
            android:text="----"
            android:textColor="@color/font_orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/str_calorie"
            android:textColor="@color/font_black"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>