<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp">

        <TextView
            style="@style/font_title_big"
            android:layout_centerVertical="true"
            android:text="@string/str_setting" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/img_cancel" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_click"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/str_app_version"
            android:textColor="@color/pulanBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:text="2.0.x"
            android:textColor="@color/pulanGray"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/str_accept_notification"
            android:textColor="@color/pulanBlack"
            android:textSize="18sp" />

        <com.suke.widget.SwitchButton
            android:id="@+id/sb_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mine"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_click"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/str_mine"
            android:textColor="@color/pulanBlack"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/img_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_click"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/str_feedback"
            android:textColor="@color/pulanBlack"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/img_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_click"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/str_about"
            android:textColor="@color/pulanBlack"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/img_arrow_right" />

    </LinearLayout>

</LinearLayout>