<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/font_title_big"
            android:text="@string/str_weight" />

        <TextView
            style="@style/font_body_normal"
            android:layout_alignBottom="@+id/tv_title"
            android:layout_toRightOf="@+id/tv_title"
            android:text="@string/str_kg" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_indicator"
        style="@style/font_fuck_big_bold"
        android:layout_gravity="center_horizontal"
        android:text="60"
        android:textColor="@color/font_orange" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false">

        <com.pulan.widget.RulerView
            android:id="@+id/ruler_weight"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="24dp"
            app:alphaEnable="true"
            app:lineColor="@color/gray"
            app:lineMaxHeight="40dp"
            app:lineMidHeight="30dp"
            app:lineMinHeight="20dp"
            app:lineSpaceWidth="10dp"
            app:lineWidth="2dp"
            app:maxValue="120.0"
            app:minValue="35.0"
            app:perValue="1"
            app:selectorValue="165.0"
            app:textColor="@color/font_black" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="88dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:src="@drawable/img_indicator" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_next"
            style="@style/btn_normal"
            android:text="@string/str_next" />

        <com.pulan.widget.OverWatchLoadingView
            android:id="@+id/loading_view"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerInParent="true"
            app:view_color="@color/themeYellow" />

    </RelativeLayout>

</LinearLayout>